# kaveau

./: .gitignore  AUTHORS  CMakeLists.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt  addbackupdialog.cpp  addbackupdialog.h  addbackupwizard.cpp  addbackupwizard.h  addbackupwizardpage1.cpp  addbackupwizardpage1.h  addbackupwizardpage1view.ui  addbackupwizardpage2.cpp  addbackupwizardpage2.h  addbackupwizardpage2view.ui  addbackupwizardpage3.cpp  addbackupwizardpage3.h  addbackupwizardpage3view.ui  changediskdialog.cpp  changediskdialog.h  changediskdialog.ui  devicewidget.cpp  devicewidget.h  devicewidgetview.ui  excludeditemsdialog.cpp  excludeditemsdialog.h  excludeditemsview.ui  kaveau.notifyrc  kaveauui.rc  logdialog.cpp  logdialog.h  logview.ui  main.cpp  mainwidgetbase.ui  mainwidgetbase.ui.bk  mainwindow.cpp  mainwindow.h
src/daemon/: CMakeLists.txt  backupdevice.cpp  backupdevice.h  backupmanager.cpp  kaveaudaemon.cpp  kaveaudaemon.desktop  kaveaudaemon.h  kaveaudaemon_export.h  main.cpp  processlistener.cpp  processlistener.h
src/utils/: CMakeLists.txt  backup.cpp  backup.h  backupdevice.cpp  backupdevice.h  backupmanager.cpp  backupmanager.h  backupremoverthread.cpp  backupremoverthread.h  backupthread.cpp  backupthread.h  common.cpp  common.h  configmanager.cpp  configmanager.h  kaveau_utils_export.h  processlistener.cpp  processlistener.h  rdifflistener.cpp  rdifflistener.h  rdiffmanager.cpp  rdiffmanager.h  settings.cpp  settings.h
tests/: CMakeLists.txt  testcommon.cpp
